--- a/PodTube/BLL/PodTube.BLL.csproj
+++ b/PodTube/BLL/PodTube.BLL.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.EF6" Version="2.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="X.PagedList" Version="8.4.7" />
+    <PackageReference Include="X.PagedList.EF" Version="8.4.7" />
   </ItemGroup>
 
   <ItemGroup>
