Add Login functionality

--- a/PodTube/Server/appsettings.json
+++ b/PodTube/Server/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Security": {
+    "ValidIssuer": "PodTube",
+    "ValidAudience": "PodTube",
+    "JwtSubClaim":  "PodTubeAuthenticated"
+  }
 }
