--- a/PodTube/Client/PodTube.Client.csproj
+++ b/PodTube/Client/PodTube.Client.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.SessionStorage" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.2.2" />
@@ -20,6 +21,12 @@
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\sample\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Components\VideoPlayer\PodTubeVideoPlayer.razor.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
