--- a/PodTube/Server/appsettings.Development.json
+++ b/PodTube/Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Security": {
+    "IssuerSigningKey": "podtube_dev.key"
   }
 }
