Add editor from other repo

--- a/PodTube/Client/PodTube.Client.csproj
+++ b/PodTube/Client/PodTube.Client.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.SassCompiler" Version="1.69.5" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PodTube.Client.Editor\PodTube.Client.Editor.csproj" />
     <ProjectReference Include="..\Shared\PodTube.Shared.csproj" />
   </ItemGroup>
 
