--- a/PodTube/Client/PodTube.Client.csproj
+++ b/PodTube/Client/PodTube.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
+    <PackageReference Include="Mime-Detective" Version="23.10.1" />
     <PackageReference Include="MudBlazor" Version="6.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="4.20.0" />
