--- a/PodTube/Server/PodTube.Server.csproj
+++ b/PodTube/Server/PodTube.Server.csproj
@@ -29,5 +29,9 @@
     <ProjectReference Include="..\Shared\PodTube.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 
 </Project>
